  * Switch armel to 2.6.32.

  [ Cyril Brulebois ]
  * Warn if only the 'build' directory has been checked out instead of the
    full source of the 'debian-installer' package.

  [ Cyril Brulebois / Frans Pop ]
  * Switch graphical installer from DirectFb to X.Org backend
    - include xserver-xorg udebs for G-I images
    - use console-setup instead of kbd-chooser for G-I images

 -- Christian Perrier <bubulle@debian.org>  Sun, 14 Feb 2010 17:06:27 +0100

debian-installer (20100211) unstable; urgency=low

  [ Frans Pop ]
  * Major update of Debian Installer Internals document.
  * Move menu-item-numbers.txt and available-hooks.txt to D-I Internals.
  * Exclude localechooser, kbd-chooser and auto-install for all installs
    of type network-console.
  * armel/orion5x: drop some additional languages as the image is too large.
  * Drop languages only supported in graphical installer by default and only
    keep them for targets that build graphical installer images.

  [ Otavio Salvador ]
  * Do not list dhcp3-client-udeb in pkg-lists since it is added, when
    needed, as dependency in netcfg.

 -- Otavio Salvador <otavio@ossystems.com.br>  Thu, 11 Feb 2010 18:03:22 -0200

debian-installer (20100122) unstable; urgency=low

  [ Otavio Salvador ]
  * debian/copyright: clarify it is licensed in GPL 2 or later.

  [ Frans Pop ]
  * Include contents of fosdem07 talk as a tarball instead of loose files as
    they confuse Lintian.
  * get-packages: correctly restore original Packages files when script exits
    after they have been filtered.
  * x86: only include gtk related syslinux files in the cd_info tarball for
    debian-cd if we're building both text and gtk images.
  * Bump debhelper compat to 6; bump Standards-Version to 3.8.3.
  * gen-sources.list.udeb: also use any mirrors defined in files in the
    /etc/apt/sources.list.d directory; /etc/apt/sources.list can be empty.
  * gen-sources.list.udeb: allow for multiple spaces and tabs in a source line.