@@ -34,6 +34,7 @@ debian-installer (2010xxxx) UNRELEASED; urgency=low
   * Switch graphical installer from DirectFb to X.Org backend
     - include xserver-xorg udebs for G-I images
     - use console-setup instead of kbd-chooser for G-I images
+    - exclude X.Org modules from library reduction
 
  -- Christian Perrier <bubulle@debian.org>  Sun, 14 Feb 2010 17:06:27 +0100
 
